--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,8 @@
     "angular-route": "1.2.x",
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
+    "jquery": "1.11.x",
+    "bootstrap": "3.1.x",
     "html5-boilerplate": "~4.3.0"
   }
 }
